preventing next/prev on state==3. modified set playing to find siblings through model rather than assuming view is visible (siblings() fails when it is not).

--- a/public/css/app.less
+++ b/public/css/app.less
@@ -5,6 +5,14 @@
 @import "playlist.less";
 @import "controls.less";
 
+.btn-group .btn-mini.dropdown-toggle {
+  padding-left: 6px;
+  padding-right: 6px;
+  
+  .caret {
+    margin-top: 6px;
+  }  
+}
 
 input,
 button,
